--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,14 @@ service: node-example
 provider:
   name: aws
   runtime: nodejs20.x
+  memorySize: 256
+
+build:
+  esbuild:
+    minify: true
+
+package:
+  individually: true
 
 functions:
   hello:
@@ -14,6 +22,7 @@ functions:
       - httpApi:
           path: /
           method: get
+
   getOrderById:
     handler: getOrder.getOrderById
     events:
